--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.1"
+    },
+  "engines": {
+      "node": "v16.15.1"
+    },
   "bugs": {
     "url": "https://github.com/baijuka/mern-bmart/issues"
   },
