--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.1"
     },
   "engines": {
-      "node": "v16.15.1"
+      "node": "v16.15.1",
+      "npm": "8.11.0"
     },
   "bugs": {
     "url": "https://github.com/baijuka/mern-bmart/issues"
