--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "4.18.1"
     },
   "engines": {
-      "node": "v16.15.1",
+      "node": "16.15.1",
       "npm": "8.11.0"
     },
   "bugs": {
