--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "4.18.1"
+    "express": "^4.18.1"
     },
   "engines": {
-      "node": "16.15.1",
-      "npm": "8.11.0"
+      "node": "^16.15.1",
+      "npm": "^8.11.0"
     },
   "bugs": {
     "url": "https://github.com/baijuka/mern-bmart/issues"
